--- a/Examen 212/Base.lproj/Main.storyboard
+++ b/Examen 212/Base.lproj/Main.storyboard
@@ -1,24 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aX8-rU-KGG">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Examen Table View Controller-->
+        <scene sceneID="eYC-pc-McT">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="aX8-rU-KGG" customClass="ExamenTableViewController" customModule="Examen_212" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dn3-b4-fyq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Item Cell" rowHeight="154" id="x3k-EM-R6F" customClass="ItemTableViewCell" customModule="Examen_212" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="154"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="x3k-EM-R6F" id="4E0-ac-HgM">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="153.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d7K-93-1x3">
+                                            <rect key="frame" x="16" y="57" width="40" height="40"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="40" id="Hgo-ib-a49"/>
+                                                <constraint firstAttribute="width" constant="40" id="fpr-m8-fnX"/>
+                                            </constraints>
+                                        </imageView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3XK-vo-j69">
+                                            <rect key="frame" x="312" y="57" width="40" height="40"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="03N-db-bIE">
+                                            <rect key="frame" x="166.5" y="66.5" width="42" height="20.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="d7K-93-1x3" firstAttribute="leading" secondItem="4E0-ac-HgM" secondAttribute="leadingMargin" id="Gwu-6b-GHp"/>
+                                        <constraint firstItem="3XK-vo-j69" firstAttribute="centerY" secondItem="4E0-ac-HgM" secondAttribute="centerY" id="PBX-oF-LdF"/>
+                                        <constraint firstItem="03N-db-bIE" firstAttribute="centerY" secondItem="4E0-ac-HgM" secondAttribute="centerY" id="Use-Lq-67W"/>
+                                        <constraint firstItem="3XK-vo-j69" firstAttribute="height" secondItem="d7K-93-1x3" secondAttribute="height" id="YJm-zS-YhG"/>
+                                        <constraint firstItem="3XK-vo-j69" firstAttribute="width" secondItem="d7K-93-1x3" secondAttribute="width" id="bOQ-lW-oie"/>
+                                        <constraint firstItem="d7K-93-1x3" firstAttribute="centerY" secondItem="4E0-ac-HgM" secondAttribute="centerY" id="cbB-61-Unn"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="3XK-vo-j69" secondAttribute="trailing" constant="7" id="wUj-8S-dPs"/>
+                                        <constraint firstItem="03N-db-bIE" firstAttribute="centerX" secondItem="4E0-ac-HgM" secondAttribute="centerX" id="x4c-iv-iqU"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="img1" destination="d7K-93-1x3" id="GUV-ud-xQ6"/>
+                                    <outlet property="img2" destination="3XK-vo-j69" id="gGv-R9-DBc"/>
+                                    <outlet property="nameLabel" destination="03N-db-bIE" id="lGO-Cq-xi4"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="aX8-rU-KGG" id="wvJ-ws-FWC"/>
+                            <outlet property="delegate" destination="aX8-rU-KGG" id="9gz-TN-fb6"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tX4-dQ-A8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="98.400000000000006" y="117.39130434782609"/>
         </scene>
     </scenes>
 </document>
